--- a/luci-app-cattools/luasrc/view/cattools.htm
+++ b/luci-app-cattools/luasrc/view/cattools.htm
@@ -1,4 +1,15 @@
+<!--
+ * @Author: 喵二
+ * @Date: 2023-10-08 18:00:32
+ * @LastEditors: 喵二
+ * @LastEditTime: 2023-10-08 21:12:28
+ * @FilePath: \catnd\luci-app-cattools\luasrc\view\cattools.htm
+-->
 <%+header%>
+
+<div class="cbi-map" id="cbi-CatTools">
+	<h2 name="content">CatTools</h2>
+	<div class="cbi-map-descr">CatTools AZ U Life</div>
 
 <h2 name="content"><%:CatTools%></h2>
 <br />
